fix priority button alignment

--- a/src/components/Pill/PillButtonEnhanced/PillButtonEnhanced.scss
+++ b/src/components/Pill/PillButtonEnhanced/PillButtonEnhanced.scss
@@ -36,6 +36,11 @@
         }
     }
 
+    &__priority {
+        position: relative;
+        top: -1px;
+    }
+
     &__main {
         display: flex;
         cursor: pointer;
